.metadata/.plugins/org.eclipse.cdt.ui/TIM_LED.build.log
13:06:59 **** Incremental Build of configuration Debug for project TIM_LED ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_hal_msp.d" -MT"Core/Src/stm32f4xx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_hal_msp.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
../Core/Src/main.c:79:6: error: redefinition of 'HAL_GPIO_EXTI_Callback'
   79 | void HAL_GPIO_EXTI_Callback(uint16_t GPIO_Pin){
      |      ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:67:6: note: previous definition of 'HAL_GPIO_EXTI_Callback' was here
   67 | void HAL_GPIO_EXTI_Callback(uint16_t GPIO_Pin){
      |      ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:207:13: error: invalid storage class for function 'MX_I2C1_Init'
  207 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:241:13: error: invalid storage class for function 'MX_I2S3_Init'
  241 | static void MX_I2S3_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:275:13: error: invalid storage class for function 'MX_SPI1_Init'
  275 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:313:13: error: invalid storage class for function 'MX_TIM6_Init'
  313 | static void MX_TIM6_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:351:13: error: invalid storage class for function 'MX_GPIO_Init'
  351 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:57:13: warning: 'MX_GPIO_Init' used but never defined
   57 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:58:13: warning: 'MX_I2C1_Init' used but never defined
   58 | static void MX_I2C1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:59:13: warning: 'MX_I2S3_Init' used but never defined
   59 | static void MX_I2S3_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:60:13: warning: 'MX_SPI1_Init' used but never defined
   60 | static void MX_SPI1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:61:13: warning: 'MX_TIM6_Init' used but never defined
   61 | static void MX_TIM6_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:459:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  459 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:351:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  351 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:313:13: warning: 'MX_TIM6_Init' defined but not used [-Wunused-function]
  313 | static void MX_TIM6_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:275:13: warning: 'MX_SPI1_Init' defined but not used [-Wunused-function]
  275 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:241:13: warning: 'MX_I2S3_Init' defined but not used [-Wunused-function]
  241 | static void MX_I2S3_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:207:13: warning: 'MX_I2C1_Init' defined but not used [-Wunused-function]
  207 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:161:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  161 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

13:07:01 Build Failed. 9 errors, 12 warnings. (took 1s.745ms)

